Renamed main.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	
 		<tr>
 		
-			<td id="td"><strong><em><a href="main.html">Главная</a></em></strong></td>
+			<td id="td"><strong><em><a href="index.html">Главная</a></em></strong></td>
 			<td id="td"><strong><em><a href="menu.html">Меню</a></em></strong></td>
-			<td id="td"><strong><em><a href="main.html#about">О нас</a></em></strong></td>
+			<td id="td"><strong><em><a href="index.html#about">О нас</a></em></strong></td>
 			<td id="td"><strong><em><a href="gallery.html">Галерея</a></em></strong></td>
-			<td id="td"><strong><em><a href="main.html#karaoke">Караоке</a></em></strong></td>
-			<td id="td"><strong><em><a href="main.html#contacts">Контакты</a></em></strong></td>
+			<td id="td"><strong><em><a href="index.html#karaoke">Караоке</a></em></strong></td>
+			<td id="td"><strong><em><a href="index.html#contacts">Контакты</a></em></strong></td>
 			
 		</tr>
 
