http replaced by https in two links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Perfect</title>
 <link href="1.css" rel="stylesheet" type="text/css"/>
 <link href="animate.css" rel="stylesheet" type="text/css"/>
-<link href="http://allfont.ru/allfont.css?fonts=annabelle" rel="stylesheet" type="text/css" />
-<script src="http://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
+<link href="https://allfont.ru/allfont.css?fonts=annabelle" rel="stylesheet" type="text/css" />
+<script src="https://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
 <body id="body">
