--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Perfect</title>
+<title>Perfetto</title>
 <link href="1.css" rel="stylesheet" type="text/css"/>
 <link href="animate.css" rel="stylesheet" type="text/css"/>
 <link href="https://allfont.ru/allfont.css?fonts=annabelle" rel="stylesheet" type="text/css" />
@@ -64,7 +64,7 @@
 <div id="text">
 <a name="about"></a>
 <h1>О нас</h1>
-<p>Ресторан «Perfect» расположенный в самом сердце Дарницкого района Киева.
+<p>Ресторан «Perfetto» расположенный в самом сердце Дарницкого района Киева.
 Это необыкновенно уютное место для Ваших встреч, где Вы сможете отлично отдохнуть,
 позабыть о серых буднях и просто весело провести время в кругу своих родных, друзей и коллег.
 Презентабельный и стильный дизайн, интеллигентная атмосфера, изысканное меню и 
@@ -103,7 +103,7 @@
 <div id="text" class="karaoke">
 <a name="karaoke"></a>
 <h1>Караоке</h1>
-<p>Karaoke Bar Perfect – это уютная атмосфера, профессиональный звук и самые харизматичные ведущие! 
+<p>Karaoke Bar Perfetto – это уютная атмосфера, профессиональный звук и самые харизматичные ведущие! 
 Уникальность нашего клубного комплекса состоит в том, что после исполнения любимых хитов, 
 вы всегда можете потанцевать в зале disco или отдохнуть на lounge-террасе. Karaoke Bar работает ежедневно, 
 а по будням всегда радует девушек приятными подарками и вкусными сюрпризами!</p>
